--- a/src/app/game/players/player-list/player-list.component.html
+++ b/src/app/game/players/player-list/player-list.component.html
@@ -1,4 +1,17 @@
 <div>
   <button class="btn btn-primary" (click)="addNewPlayer()">Add Player</button>
 
+  <div class="list-group">
+
+    <a *ngFor="let player of players;" href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">{{ player.name }}</h5>
+        <small>PF: {{ player.vitalPoints }}</small>
+      </div>
+      <small>Initiative: {{ player.initiative }}</small>
+      <button class="btn btn-danger" (click)="removePlayer(player)">Remove</button>
+    </a>
+
+  </div>
+
 </div>
