--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,4 +1,4 @@
-<div class="row mt-3" >
+<div class="row mt-3">
   <div class="col-md-12 text-center">
 
     <div *ngIf="error" class="alert alert-warning mb-4" role="alert">
@@ -10,7 +10,67 @@
 </div>
 
 <div class="row mt-2">
-  <div class="col-3"><app-npc-list></app-npc-list></div>
-  <div class="col-6">Rounds</div>
-  <div class="col-3"><app-player-list></app-player-list></div>
+  <div class="col-3">
+    <app-npc-list></app-npc-list>
+  </div>
+  <div class="col-6">
+    <div class="card mb-4">
+      <h6 class="card-header">Round of: Nome player</h6>
+      <div class="card-body">
+        <div class="form-row">
+          <div class="col-8">
+            form action
+          </div>
+          <div class="col text-right">
+            PF: 15 / 20
+          </div>
+        </div>
+      </div>
+      <div class="card-footer">
+        <button class="btn btn-danger pull-right btn-sm">Fine Round</button>
+      </div>
+    </div>
+
+
+    <div class="list-group">
+      <div class="list-group-item list-group-item-action flex-column align-items-start mb-2">
+        <small>Round 2</small>
+        <div class="d-flex w-100 justify-content-between">
+          <h5 class="mb-1"> Nome player </h5>
+          <small>PF: 14 / 20</small>
+        </div>
+        <div class="effects">
+          <div class="malus pull-left alert-danger  pt-1 pb-1 pr-2 pl-2">
+            <small>Malus: Sonno, Accecato</small>
+          </div>
+          <div class="bonus pull-right alert-success pt-1 pb-1  pr-2 pl-2">
+            <small>Bonus: Benedizione</small>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="list-group-item list-group-item-action flex-column align-items-start mb-2">
+        <small>Round 1</small>
+        <div class="d-flex w-100 justify-content-between">
+          <h5 class="mb-1"> NPC </h5>
+          <small>PF: 14 / 20</small>
+        </div>
+        <div class="effects">
+          <div class="malus pull-left alert-danger  pt-1 pb-1 pr-2 pl-2">
+            <small>Malus: Sonno, Accecato</small>
+          </div>
+          <div class="bonus pull-right alert-success pt-1 pb-1  pr-2 pl-2">
+            <small>Bonus: Benedizione</small>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+
+  </div>
+  <div class="col-3">
+    <app-player-list></app-player-list>
+  </div>
 </div>
